# respick

./: .gitignore  README.md  pyproject.toml  resistor_divider_picker.py
respick/: cli.py
src/respick/: cli.py  core.py
